<resources>
    <string name="app_name">SuaraNusa</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_Musical_Heritage">Musical Heritage</string>
    <string name="suara_nusa">SUARA NUSA</string>
    <string name="slide_word">Record your voice and let our AI help you explore unique melodies from across Indonesia!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="ini_login">ini login</string>
    <string name="ini_register">ini register</string>
    <string name="list">List</string>
    <string name="profile">Profile</string>
    <string name="forgot_password">*Forgot Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_song">Search Song</string>
    <string name="result">Result</string>
    <string name="song_title_s">Song Title: $s</string>
    <string name="confident_s">Confident: $s</string>
    <string name="youtube_title">youtube title</string>
    <string name="back_button">Back Button</string>
    <string name="your_favorites">Your Favorites</string>
</resources>