<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.suaranusa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_result_fragment"
            app:destination="@id/result_fragment"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.suaranusa.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.suaranusa.ui.list.MusicalHeritageFragment"
        android:label="@string/title_Musical_Heritage"
        tools:layout="@layout/fragment_musical_heritage" />

    <fragment
        android:id="@+id/navigation_blank"
        android:name="com.example.suaranusa.ui.profile.BlankFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/result_fragment"
        android:name="com.example.suaranusa.ui.home.result.ResultFragment"
        android:label="Result"
        >
        <argument
            android:name="responsePredict"
            app:argType="com.example.suaranusa.response.predict.ResponsePredict"
            />
    </fragment>

</navigation>