<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".ui.auth.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_gravity="top" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/auth_edit_text"/>

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_gravity="top"/>

            <EditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/auth_edit_text"/>

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_gravity="top"/>

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textColor="@color/black"
                android:padding="10dp"
                android:background="@drawable/auth_edit_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password"/>
            <EditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Question"/>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/question_spinner"
                android:layout_width="match_parent"
                android:padding="10dp"

                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text"/>

            <TextView
                android:id="@+id/answer_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Answer"/>

            <EditText
                android:id="@+id/answer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text"
                android:padding="10dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/auth_button"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>